Header and navigation toolbar staged and formatted

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
     <title>Airlines!!</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+  <header class="top-container">
+    <h1 class="page-name">PUERTO RICO AIRLINES</h1>
+    <nav>
+      <button class="nav-button"
+        type="button">
+        HOME
+      </button>
+      <button class="nav-button"
+        type="button">
+        FLIGHTS
+      </button>
+      <button class="nav-button"
+        type="button">
+        SUPPORT
+      </button>
+      <button class="nav-button"
+        type="button">
+        LOGIN
+      </button>
+    </nav>
+  </header>
   <body>
 
   </body>
