--- a/index.html
+++ b/index.html
@@ -27,6 +27,48 @@
     </nav>
   </header>
   <body>
-
+    <div class="flight-info">
+      <div class="flights">
+        <h1 class="box-title">Flights</h1>
+        <p>Come check out or sweet flights!
+          Direct flights available daily!</p>
+        <button class="box-button"
+          type="button">
+          Lets go
+        </button>
+      </div>
+      <div class="group-trips">
+        <h1 class="box-title">Group Trips</h1>
+        <p>We offer great group rates! For
+          families with 4 members to huge
+          gatherings with 50+!</p>
+        <button class="box-button"
+          type="button">
+          Group Rates
+        </button>
+      </div>
+      <div class="discount-flights">
+        <h1 class="box-title">Discount Flights</h1>
+        <p>Discount flights available for
+          individuals! Single chair filler tickets
+          for low rates!</p>
+        <button class="box-button"
+          type="button">
+          Jump in
+        </button>
+      </div>
+    </div>
+    <div class="more">
+      <div class="about-us">
+        <h1 class="box-title">About us</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button class="box-button"
+          type="button">
+          Learn More
+        </button>
+      </div>
+    </div>
   </body>
 </html>
