--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="flight-info">
       <div class="flights">
         <h1 class="box-title">Flights</h1>
-        <p>Come check out or sweet flights!
+        <p class="main-text">Come check out or sweet flights!
           Direct flights available daily!</p>
         <button class="box-button"
           type="button">
@@ -39,7 +39,7 @@
       </div>
       <div class="group-trips">
         <h1 class="box-title">Group Trips</h1>
-        <p>We offer great group rates! For
+        <p class="main-text">We offer great group rates! For
           families with 4 members to huge
           gatherings with 50+!</p>
         <button class="box-button"
@@ -49,7 +49,7 @@
       </div>
       <div class="discount-flights">
         <h1 class="box-title">Discount Flights</h1>
-        <p>Discount flights available for
+        <p class="main-text">Discount flights available for
           individuals! Single chair filler tickets
           for low rates!</p>
         <button class="box-button"
@@ -61,10 +61,10 @@
     <div class="more">
       <div class="about-us">
         <h1 class="box-title">About us</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+        <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
           nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
           nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <button class="box-button"
+        <button class="learn-more-button"
           type="button">
           Learn More
         </button>
